[tool.poetry]
name = "bolha-dados"
version = "0.1.0"
description = ""
authors = ["Breno Fernandes <brenojesusfernandes@pm.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
tweepy = "4.9.0"
loguru = "0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
